--- a/back/templates/questions.html
+++ b/back/templates/questions.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
     <script
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
@@ -133,7 +133,7 @@
  });
       });
 
-      
+
     </script>
   </body>
 </html>
