--- a/back/templates/index.html
+++ b/back/templates/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<html lang="en">
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Hello Bulma!</title>
 
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"
     />
     <script
-      defer
-      src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+            defer
+            src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
-  </head>
-  <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+</head>
+<nav class="navbar is-primary" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
-      <a class="navbar-item" href="/">
-        <strong>Recipe Wizard</strong>
-      </a>
+        <a class="navbar-item" href="/">
+            <strong>Recipe Wizard</strong>
+        </a>
 
-      <!-- <a
-        role="button"
-        class="navbar-burger burger"
-        aria-label="menu"
-        aria-expanded="false"
-        data-target="navbarBasicExample"
-      > -->
-        <span aria-hidden="true"></span> <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
+        <a
+                role="button"
+                class="navbar-burger burger"
+                aria-label="menu"
+                aria-expanded="false"
+                data-target="navbarBasicExample"
+        >
+            <span aria-hidden="true"></span> <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </a>
     </div>
     <!-- <div class="navbar-end">
         <div class="navbar-item">
@@ -40,24 +41,27 @@
         </div>
       </div>
     </div> -->
-  </nav>
-  <body>
-    <section class="section">
-      <div class="container">
+</nav>
+<body>
+<section class="section">
+    <div class="container">
         <p class="subtitle">
-          Scan a receipt to see what you can cook with food you just bought
+            Scan a receipt to see what you can cook with food you just bought
         </p>
         <form action="/image" method="POST" enctype="multipart/form-data">
-        <a class="button is-primary is-fullwidth">
-            <label for="file-upload" class="custom-file-upload">Scan receipt</label>
-        </a>
-        <input hidden name="file-upload" id="file-upload" type="file" accept="image/*" capture="camera"/>
-        <input class="button is-primary is-fullwidth" type="submit" value="Submit">
-            </form>
-      <br/>
-      <a class="button is-primary is-fullwidth" href="static/questions.html">
-            Find a recipe
-      </a>
-    </section>
-  </body>
+            <p><a class="button is-primary is-fullwidth">
+                <label for="file-upload" class="custom-file-upload">Scan receipt</label>
+            </a>
+            </p>
+            <input hidden name="file-upload" id="file-upload" type="file" accept="image/*" capture="camera"/>
+        </form>
+    </div>
+</section>
+
+<script>
+  $('form input').change(function() {
+    $(this).closest('form').submit();
+  });
+</script>
+</body>
 </html>
