--- a/back/static/style.css
+++ b/back/static/style.css
@@ -11,27 +11,35 @@
   padding-bottom: 10px;
 }
 
+.container {
+  padding-top: 0px;
+}
+
 .title {
   text-align: center;
+}
+
+.title-left {
+  text-align: left;
 }
 
 .title-buttons {
   justify-content: center;
 }
 
-.notification{
-  position:fixed;
-  top:150%;
-  left:5%;
+.notification {
+  position: fixed;
+  top: 150%;
+  left: 5%;
   height: 30%;
   background: whitesmoke;
-  padding:15px;
+  padding: 15px;
   color: #3b3b3b;
-  font-size:16px;
-  border-radius:3px;
-  transform:translateY(-50%);
-  box-sizing:border-box;
-  animation:0.3s down ease 1;
+  font-size: 16px;
+  border-radius: 3px;
+  transform: translateY(-50%);
+  box-sizing: border-box;
+  animation: 0.3s down ease 1;
   display: none;
 }
 
@@ -44,12 +52,28 @@
   color: #555555;
 }
 
-.food-border {
-  border-bottom: 1px solid #eeeeee;
+.section {
+  padding-top: 20px;
 }
 
-img {
-  border-radius: 4px;
+.custom-img {
+  height: 180px;
+  width: 100%;
+  opacity: 1;
+}
+
+.recipe-name {
+  opacity: 0.8;
+  width: 100%;
+  position: absolute;
+  top: 177px;
+  z-index: 1000000000;
+  background-color: white;
+  padding: 10px;
+}
+
+.food-border {
+  border-bottom: 1px solid #eeeeee;
 }
 
 .tags {
@@ -68,124 +92,125 @@ img {
   padding-top: 8px;
 }
 
-.notification.active{
-  top:90%;
-  left:5%;
-  animation:0.3s up ease 1;
-  display:block;
+.notification.active {
+  top: 90%;
+  left: 5%;
+  animation: 0.3s up ease 1;
+  display: block;
 }
 
-.notification a{
+.notification a {
   color: skyblue;
-  text-decoration:none;
-  display:block;
-  float:right;
-  width:auto;
-  padding:0 10px;
-  height:40px;
-  margin-left:15px;
-  background:rgba(0,0,0,0.1);
-  border-radius:5px;
+  text-decoration: none;
+  display: block;
+  float: right;
+  width: auto;
+  padding: 0 10px;
+  height: 40px;
+  margin-left: 15px;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
 }
 
-.text{
-  height:40px;
-  line-height:40px;
-  padding:0 10px;
-  float:left;
+.text {
+  height: 40px;
+  line-height: 40px;
+  padding: 0 10px;
+  float: left;
 }
 
-.close{
-  height:40px;
-  width:40px;
-  line-height:40px;
-  border-radius:50%;
-  text-align:center;
-  position:relative;
-  cursor:pointer;
-  overflow:hidden;
-  float:right;
-  background:rgba(0,0,0,0.1);
-  font-size:20px;
+.close {
+  height: 40px;
+  width: 40px;
+  line-height: 40px;
+  border-radius: 50%;
+  text-align: center;
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+  float: right;
+  background: rgba(0, 0, 0, 0.1);
+  font-size: 20px;
 }
 
-.close .text{
-  padding:0;
-  text-align:center;
-  width:100%;
-  height:100%;
+.close .text {
+  padding: 0;
+  text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
-@keyframes up{
-  0%{
-    display:none;
-    top:100%;
-    opacity:0;
+@keyframes up {
+  0% {
+    display: none;
+    top: 100%;
+    opacity: 0;
   }
-  75%{
-    top:90%;
-    opacity:1;
+  75% {
+    top: 90%;
+    opacity: 1;
   }
-  100%{
-    display:block;
-  }
-}
-@keyframes down{
-  0%{
-    top:90%;
-    opacity:1;
-    display:block;
-  }
-  75%{
-    top:150%;
-    opacity:0;
-  }
-  100%{
-    display:block;
+  100% {
+    display: block;
   }
 }
-@keyframes sup{
-  0%{
-    display:none;
-    top:100%;
-    transform:translateY(0%);
-    opacity:0;
+@keyframes down {
+  0% {
+    top: 90%;
+    opacity: 1;
+    display: block;
   }
-  75%{
-    top:100%;
-    transform:translateY(-100%);
-    opacity:1;
+  75% {
+    top: 150%;
+    opacity: 0;
   }
-  100%{
-    display:block;
+  100% {
+    display: block;
   }
 }
-@keyframes sdown{
-  0%{
-    top:100%;
-    opacity:1;
-    display:block;
-    transform:translateY(-100%);
+@keyframes sup {
+  0% {
+    display: none;
+    top: 100%;
+    transform: translateY(0%);
+    opacity: 0;
   }
-  75%{
-    top:150%;
-    opacity:0;
-    transform:translateY(0%);
+  75% {
+    top: 100%;
+    transform: translateY(-100%);
+    opacity: 1;
   }
-  100%{
-    display:block;
+  100% {
+    display: block;
   }
 }
-@media only screen and (max-width:560px){
-  .notification,.notification.active{
-    width:100%;
-    top:100%;
-    transform:translateY(-100%);
-    left:0;
-    border-radius:0;
-    animation:0.3s sdown ease 1;
+@keyframes sdown {
+  0% {
+    top: 100%;
+    opacity: 1;
+    display: block;
+    transform: translateY(-100%);
   }
-  .notification.active{
-    animation:0.3s sup ease 1;
+  75% {
+    top: 150%;
+    opacity: 0;
+    transform: translateY(0%);
+  }
+  100% {
+    display: block;
+  }
+}
+@media only screen and (max-width: 560px) {
+  .notification,
+  .notification.active {
+    width: 100%;
+    top: 100%;
+    transform: translateY(-100%);
+    left: 0;
+    border-radius: 0;
+    animation: 0.3s sdown ease 1;
+  }
+  .notification.active {
+    animation: 0.3s sup ease 1;
   }
 }
