--- a/back/templates/questions.html
+++ b/back/templates/questions.html
@@ -96,7 +96,7 @@
 
         <div class="columns is-mobile">
             <div class="column is-9">
-                <p class="is-5">Your pantry</p>
+                <p class="is-5">Your pantry 🍎</p>
             </div>
             <div class="column">
                 <div class = "close" onclick="$('.notification').toggleClass('active')">
@@ -130,10 +130,10 @@
 
       function addRecipes(recipes) {
         for(var i = 0; i < recipes.length; i++) {
-          var jedlo = `<a href="http://${window.location.host}/recipe">
+          var jedlo = `<a href="http://${window.location.host}/recipe/${recipes[i].value}">
                                     <div class="columns is-mobile food-border">
                                         <div class="column is-9">
-                                            <p name="${recipes[i].id}" class="food-title">${recipes[i].name}</p>
+                                            <p name="${recipes[i].value}" class="food-title">${recipes[i].name}</p>
                                         </div>
                                         <div class="column">
                                             🥜
