--- a/back/templates/recipe.html
+++ b/back/templates/recipe.html
@@ -36,7 +36,7 @@
     <div>
         <img class="custom-img" src="https://slevomat.sgcdn.cz/images/t/728x364c/80/83/8083126-5e948f.jpg"/>
         <div class="recipe-name">
-            <h1 class="title-left title" name="question">Kebab do ruky</h1>
+            <h1 class="title-left title">Kebab do ruky</h1>
         </div>
     </div>
 
@@ -47,10 +47,7 @@
 
         <div class="columns is-mobile">
             <div class="column is-9 is-offset-1">
-                <ul>
-                    <li>Chlieb pita</li>
-                    <li>Pofiderne maso</li>
-                    <li>Ruka</li>
+                <ul class="ingredients">
                 </ul>
             </div>
         </div>  
@@ -60,10 +57,7 @@
         <h4 class="subtitle is-4">Steps</h4>
         <div class="columns is-mobile">
               <div class="column is-9 is-offset-1">
-                  <ol>
-                      <li>Take pita</li>
-                      <li>stick meat in</li>
-                      <li>eat</li>
+                  <ol class="directions">
                   </ol>
               </div>
           </div>
@@ -80,7 +74,21 @@
           type : "GET",
           async: false,
           success : function(res) {
-           console.log(res)
+            let directions = res.directions;
+            let ingredients = res.ingredients;
+            let name = res.name;
+            let picSrc = res.url;
+
+            $('.title').text(name);
+            $('.custom-img').attr('src', picSrc);
+
+            ingredients.forEach((ingredient) => {
+              $('.ingredients').append(`<li>${ingredient}</li>`);
+            });
+
+            directions.forEach((direction) => {
+              $('.directions').append(`<li>${direction}</li>`);
+            });
           }
         });
       });
