--- a/back/templates/recipe.html
+++ b/back/templates/recipe.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="../static/style.css">
     <script
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
@@ -18,22 +18,12 @@
       <a class="navbar-item" href="/">
         <strong>Recipe Wizard</strong>
       </a>
-
-      <!-- <a
-        role="button"
-        class="navbar-burger burger"
-        aria-label="menu"
-        aria-expanded="false"
-        data-target="navbarBasicExample"
-      > -->
-        <span aria-hidden="true"></span> <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
       </a>
     </div>
   </nav>
   <body>
 
-    <div>
+    <div class="recipe-image">
         <img class="custom-img" src="https://slevomat.sgcdn.cz/images/t/728x364c/80/83/8083126-5e948f.jpg"/>
         <div class="recipe-name">
             <h1 class="title-left title">Kebab do ruky</h1>
