--- a/back/static/style.css
+++ b/back/static/style.css
@@ -11,6 +11,14 @@
   padding-bottom: 10px;
 }
 
+.recipe-image {
+  text-align: center;
+}
+
+.ingredients {
+  list-style: circle;
+}
+
 .container {
   padding-top: 0px;
 }
