--- a/back/templates/questions.html
+++ b/back/templates/questions.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
-    <script
+      <link rel="stylesheet" href="static/bulma-pageloader.min.css">
+      <script
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -125,6 +126,8 @@
 
     </div>
 
+    <div id="bulma-pageloader" class="pageloader is-active"><span class="title">Loading...</span></div>
+
     <script type="text/javascript">
       let latest;
 
@@ -154,6 +157,7 @@
               $(".title").text(`Do you have ${res.question}?`);
               addRecipes(res.recipes);
               latest = res.question;
+              $('#bulma-pageloader').removeClass('is-active');
             }});
         });
       });
