--- a/back/templates/recipe.html
+++ b/back/templates/recipe.html
@@ -24,9 +24,9 @@
   <body>
 
     <div class="recipe-image">
-        <img class="custom-img" src="https://slevomat.sgcdn.cz/images/t/728x364c/80/83/8083126-5e948f.jpg"/>
+        <img class="custom-img"/>
         <div class="recipe-name">
-            <h1 class="title-left title">Kebab do ruky</h1>
+            <h1 class="title-left title"></h1>
         </div>
     </div>
 
