--- a/back/templates/recipe.html
+++ b/back/templates/recipe.html
@@ -25,10 +25,9 @@
 
     <div class="recipe-image">
         <img class="custom-img" src="https://slevomat.sgcdn.cz/images/t/728x364c/80/83/8083126-5e948f.jpg"/>
-        <div class="recipe-name">
-            <h1 class="title-left title">Kebab do ruky</h1>
-        </div>
     </div>
+
+    <h1 class="title-left title">Name</h1>
 
     <section class="section">
       <div class="container">
@@ -36,7 +35,7 @@
         <h4 class="subtitle is-4">Ingredients</h4>
 
         <div class="columns is-mobile">
-            <div class="column is-9 is-offset-1">
+            <div class="column is-11 is-offset-1">
                 <ul class="ingredients">
                 </ul>
             </div>
@@ -46,7 +45,7 @@
         <hr>
         <h4 class="subtitle is-4">Steps</h4>
         <div class="columns is-mobile">
-              <div class="column is-9 is-offset-1">
+              <div class="column is-11 is-offset-1">
                   <ol class="directions">
                   </ol>
               </div>
