--- a/back/static/style.css
+++ b/back/static/style.css
@@ -15,8 +15,16 @@
   text-align: center;
 }
 
+.is-4 {
+  text-decoration: underline;
+}
+
 .ingredients {
   list-style: circle;
+}
+
+.directions {
+  line-height: 23px;
 }
 
 .container {
@@ -64,20 +72,12 @@
   padding-top: 20px;
 }
 
-.custom-img {
-  height: 180px;
-  width: 100%;
-  opacity: 1;
+.recipe-image{
+  background: whitesmoke;
 }
 
-.recipe-name {
-  opacity: 0.8;
-  width: 100%;
-  position: absolute;
-  top: 177px;
-  z-index: 1000000000;
-  background-color: white;
-  padding: 10px;
+.custom-img {
+  height: 180px;
 }
 
 .food-border {
