--- a/back/templates/index.html
+++ b/back/templates/index.html
@@ -1,81 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Recipe Wizard</title>
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"
-    />
-    <link rel="stylesheet" href="static/bulma-pageloader.min.css" />
-    <script
-      defer
-      src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
-    ></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  </head>
-  <!-- <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-        <a class="navbar-item" href="/">
-            <strong>Recipe Wizard</strong>
-        </a>
-            <span aria-hidden="true"></span> <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-        </a>
-    </div>
-</nav> -->
+    <link rel="stylesheet" href="../static/bulma.min.css"/>
+    <link rel="stylesheet" href="../static/bulma-pageloader.min.css"/>
+    <script src="../static/all.js"></script>
+    <script src="../static/jquery-3.3.1.min.js"></script>
+</head>
 
-  <section class="hero is-primary is-large">
+<section class="hero is-primary is-large">
     <div class="hero-body">
-      <div class="container">
-        <h1 class="title">Recipe Wizard</h1>
-        <h2 class="subtitle">Find recipe ideas without shopping</h2>
-      </div>
+        <div class="container">
+            <h1 class="title">Recipe Wizard</h1>
+            <h2 class="subtitle">Find recipe ideas without shopping</h2>
+        </div>
     </div>
-  </section>
-  <body>
-    <section class="section">
-      <div class="container">
+</section>
+<body>
+<section class="section">
+    <div class="container">
         <p class="subtitle">
-          Scan a receipt to see what you can cook with food you just bought
+            Scan a receipt to see what you can cook with food you just bought
         </p>
         <form action="/image" method="POST" enctype="multipart/form-data">
-          <p>
-            <a class="button is-primary is-fullwidth">
-              <label for="file-upload" class="custom-file-upload"
-                >Scan receipt</label
-              >
-            </a>
-          </p>
-          <input
-            hidden
-            name="file-upload"
-            id="file-upload"
-            type="file"
-            accept="image/*"
-            capture="camera"
-          />
+            <p>
+                <a class="button is-primary is-fullwidth">
+                    <label for="file-upload" class="custom-file-upload"
+                    >Scan receipt</label
+                    >
+                </a>
+            </p>
+            <input
+                    hidden
+                    name="file-upload"
+                    id="file-upload"
+                    type="file"
+                    accept="image/*"
+                    capture="camera"
+            />
         </form>
-        <br />
+        <br/>
         <a href="/questions" class="button is-primary is-fullwidth"
-          >Go to questions</a
+        >Go to questions</a
         >
-      </div>
-    </section>
-
-    <div id="bulma-pageloader" class="pageloader">
-      <span class="title">Loading...</span>
     </div>
+</section>
 
-    <script>
-      $("form input").change(function() {
-        $("#bulma-pageloader").addClass("is-active");
-        $(this)
-          .closest("form")
-          .submit();
-      });
-    </script>
-  </body>
+<div id="bulma-pageloader" class="pageloader">
+    <span class="title">Loading...</span>
+</div>
+
+<script>
+  $("form input").change(function () {
+    $("#bulma-pageloader").addClass("is-active");
+    $(this)
+      .closest("form")
+      .submit();
+  });
+</script>
+</body>
 </html>
