--- a/back/templates/questions.html
+++ b/back/templates/questions.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Recipe Wizard</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"/>
+    <link rel="stylesheet" href="../static/bulma.min.css"/>
+      <link rel="stylesheet" href="../static/bulma-pageloader.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/style.css">
-      <link rel="stylesheet" href="static/bulma-pageloader.min.css">
       <script
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="../static/jquery-3.3.1.min.js"></script>
   </head>
   <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
@@ -217,7 +217,6 @@
           }
         })
       });
-
     </script>
   </body>
 </html>
