--- a/back/templates/recipe.html
+++ b/back/templates/recipe.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/style.css">
+    <link rel="stylesheet" href="../static/bulma-pageloader.min.css">
     <script
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
     ></script>
@@ -26,12 +27,11 @@
     <div class="recipe-image">
         <img class="custom-img" src="https://slevomat.sgcdn.cz/images/t/728x364c/80/83/8083126-5e948f.jpg"/>
     </div>
-    
-    <h1 class="title-left title">Name</h1>
+
+    <h1 class="recipe-title">Name</h1>
 
     <section class="section">
       <div class="container">
-        <br>
         <h4 class="subtitle is-4">Ingredients</h4>
 
         <div class="columns is-mobile">
@@ -52,6 +52,7 @@
           </div>
     </section>
 
+    <div id="bulma-pageloader" class="pageloader is-active"><span class="title">Loading...</span></div>
 
     <script>
       $(document).ready(() => {
@@ -68,16 +69,18 @@
             let name = res.name;
             let picSrc = res.url;
 
-            $('.title').text(name);
+            $('.recipe-title').text(name);
             $('.custom-img').attr('src', picSrc);
 
             ingredients.forEach((ingredient) => {
-              $('.ingredients').append(`<li>${ingredient}</li>`);
+              $('.ingredients').append(`<li>${ingredient.charAt(0).toUpperCase() + ingredient.slice(1)}</li>`);
             });
 
             directions.forEach((direction) => {
               $('.directions').append(`<li>${direction}</li>`);
             });
+
+            $('#bulma-pageloader').removeClass('is-active');
           }
         });
       });
