--- a/back/templates/questions.html
+++ b/back/templates/questions.html
@@ -206,10 +206,7 @@
 
   $("#shuffle-button").click(() => {
     $.ajax({
-        url: `http://${window.location.host}/question`,
-        data: {
-          response: "shuffle",
-        },
+        url: `http://${window.location.host}/shuffle`,
         type: "GET",
         async: false,
         success: function (res) {
