--- a/back/templates/questions.html
+++ b/back/templates/questions.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="../static/bulma.min.css"/>
     <link rel="stylesheet" href="../static/bulma-pageloader.min.css"/>
     <script src="../static/jquery-3.3.1.min.js"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/style.css">
 
     <script src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
