--- a/back/static/style.css
+++ b/back/static/style.css
@@ -88,6 +88,7 @@
 }
 
 .food-border {
+  padding-top: 5px;
   border-bottom: 1px solid #eeeeee;
 }
 
@@ -95,6 +96,7 @@
   max-height: 100%;
   overflow: scroll;
   padding-bottom: 30px;
+  padding-top: 5px;
 }
 
 .tag {
